src/test/ui/dst/issue-90528-unsizing-suggestion-2.stderr
error[E0277]: the trait bound `[u8; 1]: Read` is not satisfied
  --> $DIR/issue-90528-unsizing-suggestion-2.rs:14:16
   |
LL |     wants_read(x);
   |     ---------- ^
   |     |          |
   |     |          the trait `Read` is not implemented for `[u8; 1]`
   |     |          help: convert the array to a `&[u8]` slice instead: `&x[..]`
   |     required by a bound introduced by this call
   |
   = help: the following implementations were found:
             <&[u8] as Read>
note: required by a bound in `wants_read`
  --> $DIR/issue-90528-unsizing-suggestion-2.rs:10:23
   |
LL | fn wants_read(_: impl Read) {}
   |                       ^^^^ required by this bound in `wants_read`

error[E0277]: the trait bound `&[u8; 1]: Read` is not satisfied
  --> $DIR/issue-90528-unsizing-suggestion-2.rs:19:16
   |
LL |     wants_read(&x);
   |     ---------- ^^
   |     |          |
   |     |          the trait `Read` is not implemented for `&[u8; 1]`
   |     |          help: convert the array to a `&[u8]` slice instead: `&x[..]`
   |     required by a bound introduced by this call
   |
   = help: the following implementations were found:
             <&[u8] as Read>
note: required by a bound in `wants_read`
  --> $DIR/issue-90528-unsizing-suggestion-2.rs:10:23
   |
LL | fn wants_read(_: impl Read) {}
   |                       ^^^^ required by this bound in `wants_read`

error[E0277]: the trait bound `&[u8; 1]: Read` is not satisfied
  --> $DIR/issue-90528-unsizing-suggestion-2.rs:27:16
   |
LL |     wants_read(x);
   |     ---------- ^
   |     |          |
   |     |          the trait `Read` is not implemented for `&[u8; 1]`
   |     |          help: convert the array to a `&[u8]` slice instead: `&x[..]`
   |     required by a bound introduced by this call
   |
   = help: the following implementations were found:
             <&[u8] as Read>
note: required by a bound in `wants_read`
  --> $DIR/issue-90528-unsizing-suggestion-2.rs:10:23
   |
LL | fn wants_read(_: impl Read) {}
   |                       ^^^^ required by this bound in `wants_read`

error[E0277]: the trait bound `&&[u8; 1]: Read` is not satisfied
  --> $DIR/issue-90528-unsizing-suggestion-2.rs:32:16
   |
LL |     wants_read(&x);
   |     ---------- ^^ the trait `Read` is not implemented for `&&[u8; 1]`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the following implementations were found:
             <&[u8] as Read>
note: required by a bound in `wants_read`
  --> $DIR/issue-90528-unsizing-suggestion-2.rs:10:23
   |
LL | fn wants_read(_: impl Read) {}
   |                       ^^^^ required by this bound in `wants_read`

error[E0277]: the trait bound `[u8; 1]: Read` is not satisfied
  --> $DIR/issue-90528-unsizing-suggestion-2.rs:35:16
   |
LL |     wants_read(*x);
   |     ---------- ^^
   |     |          |
   |     |          the trait `Read` is not implemented for `[u8; 1]`
   |     |          help: convert the array to a `&[u8]` slice instead: `&*x[..]`
   |     required by a bound introduced by this call
   |
   = help: the following implementations were found:
             <&[u8] as Read>
note: required by a bound in `wants_read`
  --> $DIR/issue-90528-unsizing-suggestion-2.rs:10:23
   |
LL | fn wants_read(_: impl Read) {}
   |                       ^^^^ required by this bound in `wants_read`

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0277`.
